--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <!-- Main Content -->
     <div class="container" id="about">
-        <img src="C:\jakrin-github.io\mg\1.png" alt="Profile Picture" class="profile-img">
+        <img src=".\mg\1.png" alt="Profile Picture" class="profile-img">
         <h1>About Me</h1>
         <h2>Jakrin Khami</h2>
         <div class="profile-details">
